Bug 92017 - Draw has no named toolbar
Summary: Draw has no named toolbar
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Draw (show other bugs)
Version:
(earliest affected)
5.1.0.0.alpha0+ Master
Hardware: Other All
: medium normal
Assignee: Maxim Monastirsky
URL:
Whiteboard: target:5.1.0 target:5.0.0.3
Keywords: regression
: 92409 (view as bug list)
Depends on:
Blocks:
 
Reported: 2015-06-11 23:35 UTC by baffclan
Modified: 2016-10-25 19:23 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot (27.15 KB, image/png)
2015-06-11 23:35 UTC, baffclan
Details
Screenshot2 (141.38 KB, image/jpeg)
2015-06-13 09:44 UTC, baffclan
Details

Note You need to log in before you can comment on or make changes to this bug.
Description baffclan 2015-06-11 23:35:03 UTC
Created attachment 116475 [details]
Screenshot

Steps to Reproduce:
1. Start New Draw
2. Grippy with No Icons toolbar
3. Detach a  toolbar
4. Toolbar is No name.


Windows 7 Pro X64
Version: 5.1.0.0.alpha1+
Build ID: 78ecdbc2f69b9d812cf879f662e7c1277d3c9b07
TinderBox: Win-x86@62-merge-TDF, Branch:MASTER, Time: 2015-06-10_18:13:30
Locale: ja-JP (ja_JP)


It looks Master View Toolbar?
Comment 1 baffclan 2015-06-13 09:44:18 UTC
Created attachment 116496 [details]
Screenshot2

Floating unknown toolbar with Toolbars(Menu).
Comment 2 raal 2015-06-13 14:20:46 UTC
I can confirm with Version: 5.1.0.0.alpha1+
Build ID: d56b125f6c6c18ac40712cefc3cec06530750e15
TinderBox: Win-x86@39, Branch:master, Time: 2015-06-13_07:08:43
Comment 3 Yousuf Philips (jay) (retired) 2015-06-28 23:26:26 UTC
*** Bug 92409 has been marked as a duplicate of this bug. ***
Comment 4 Commit Notification 2015-07-07 21:29:37 UTC
Maxim Monastirsky committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=5d19f90eb247275420a6774403cb77940ac6131b

tdf#92017 Don't attempt to show commontaskbar in Draw

It will be available in 5.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2015-07-08 03:26:26 UTC
Maxim Monastirsky committed a patch related to this issue.
It has been pushed to "libreoffice-5-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=66ed003f66b7b3171684d9aa8f753d5aeddb8e81&h=libreoffice-5-0

tdf#92017 Don't attempt to show commontaskbar in Draw

It will be available in 5.0.0.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 6 baffclan 2015-07-08 13:17:38 UTC
Cannot reproduce with newest master.

Windows 7 Pro x64
Version: 5.1.0.0.alpha1+ (x64)
Build ID: 449d272daf5e99f039cdfdd25f020bd798fb9e1d
TinderBox: Win-x86_64@62-TDF, Branch:MASTER, Time: 2015-07-08_08:13:06
Locale: en-US (ja_JP)

Thanks for fixing this.