tdf#92017 Don't attempt to show commontaskbar in Draw

Regression from 1191ed8584f9fd63c39514dd2e3e71682913d4bc

Change-Id: Ib631c7ac7d0c8688907555d0fb2e4343ce37d660